@@ -1,3 +1,8 @@
+Thu Nov 11 14:42:03 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * connectors/ami4ccm/tests/AsynchT/Receiver/AsynchT_Receiver_exec.cpp:
+	Add include for sleep function .
+
 Thu Nov 11 10:56:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/WaitSet.cpp:
